--- a/config.json
+++ b/config.json
@@ -1,8 +1,10 @@
 {
     "price_bounds": {
-        "min": 1,
-        "max": 20
+        "min": 10000000,
+        "max": 200000000
     },
-    "step_size": 1,
-    "maximum_number_of_rounds": 2
+    "step_size": 1000000,
+    "maximum_number_of_rounds": 3,
+    "question": "What is the distance between the Sun and the Earth in Kms?",
+    "true_value": 150000000
 }
